--- a/Pages/Admin/AdminLayout.razor
+++ b/Pages/Admin/AdminLayout.razor
@@ -9,13 +9,13 @@
                          href="/admin/laptops"
                          ActiveClass="btn-primary text-white"
                          Match="NavLinkMatch.Prefix">
-                    Laptops
+                    Sản phẩm
                 </NavLink>
                 <NavLink class="btn btn-outline-primary btn-block"
                          href="/admin/orders"
                          ActiveClass="btn-primary text-white"
                          Match="NavLinkMatch.Prefix">
-                    Orders
+                    Đặt hàng
                 </NavLink>
             </div>
             <div class="col">
